--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -3,8 +3,37 @@
 	html { -ms-touch-action: none; }			
 	body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%;}
 	body { overflow: hidden; /* this is important to prevent the whole page to bounce */}
-		
 	
+	table {border: 0 !important; }
+	table thead tr {border: 0 !important; }
+	table tbody tr {border: 0 !important; }	
+	table thead tr td {border: 0 !important; }
+	table tbody tr td {border: 0 !important; }
+	
+	thead {
+
+		background:#3E79C4;  
+		color:#FFD455;
+		font-size: 1.2em;
+		font-weight: bold;
+
+	}
+	
+	.content-menu {		
+		background:#fffff;
+		height; 40px; 
+		line-height:40px;
+		font-size: 1.2em;
+	}
+	.content-menu span:last-child {
+		margin-left:  5px;
+	}		
+
+	
+	.content-menu:nth-child(even) {background:#E6E6E6; color:#1E5733; }
+	.content-menu:nth-child(odd) {background:#FFFFFF;  color:#3E79C4; }
+	.content-menu:last-child {border-bottom: solid #FFD455; }
+
 
 	#wrapper, #wrapper2, #wrapperM { 
 		position: absolute;z-index: 1; top: 50px; bottom: 0; left: 0; width: 100%; background: #fff;
@@ -23,6 +52,8 @@
 
 	
 	
+	
+	
 	header {	
 		position: absolute; 
 		z-index: 2; 
@@ -39,13 +70,16 @@
 		font-weight: bold;
 		display: none;
 		border-bottom: solid #4D4D4D;
+		text-transform: uppercase;
 	}
 			
 	header .glyphicon  {
 		color: #3E79C4;
 	}			
 
-
+	body.content-init header {
+		display: none;
+	}
 
 	body header:not(.content-home) {
 		display: block;
@@ -372,7 +406,7 @@
 	body.content-home #wrapper .scroller .container .row .metro:last-child {padding-right: 0px !important; margin: 0 !important;}
 	
 			
-	body.content-home header {display: none;}
+	/*body.content-home header {display: none;}
 	body.content-home #wrapper, body.content-home #wrapperM { 
 		position: absolute;
 		z-index: 1; 
@@ -381,7 +415,7 @@
 		left: 0; 
 		width: 100%; 
 		background: #fff;
-	}
+	}*/
 	
 	body.content-home #wrapper .scroller .container figure {position:relative;  width: 100%; height: auto; margin: 0; }
 	body.content-home #wrapper .scroller .container figure img { width: 100%;  height: auto;}			
@@ -401,3 +435,52 @@
 
 
 
+
+	/*calendario*/
+	body.content-calendario .calendario-menu.container {
+		position: absolute; 
+		top:45px; 
+		left:0; 		
+		width: 100%; 
+		height: 45px;
+		line-height:45px; 
+		z-index: 2; 
+		font-size: 1.6em; 
+		background: #E6E6E6; 
+		color:#4D4D4D;
+		border-bottom: solid #FFD455;
+	}
+	
+	body.content-calendario .calendario-menu.container .active {
+		color:#3E79C4;
+	}
+	
+	body.content-calendario .name-month {
+		text-align: center;
+		font-size: 1.4em;
+		font-weight: bold;
+		color:#ffffff;	
+		background: #3E79C4 !important;
+		text-transform: uppercase;
+	}
+	
+	body.content-calendario .row div[data-country] {
+		height: 40px;
+		line-height: 40px;
+		font-size: 1.2em;
+		color:#4D4D4D;  
+	}
+	body.content-calendario .row div[data-phase] {
+		height: 40px;
+		line-height: 40px;
+		font-size: 1.2em;	
+		color:#4D4D4D; 	
+	}
+	
+	body.content-calendario .row div[data-country]:nth-child(even) { background:#E6E6E6; }	
+	body.content-calendario .row div[data-country]:nth-child(odd) {background:#FFFFFF; }
+	
+	body.content-calendario .row div[data-phase]:nth-child(even) { background:#E6E6E6;}	
+	body.content-calendario .row div[data-phase]:nth-child(odd) {background:#FFFFFF;}
+	
+	/*calendario*/
