--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/fonts/iconvault/iconvault-preview.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/fonts/iconvault/iconvault-preview.css
@@ -4,11 +4,11 @@
 
 @font-face {
   font-family: "iconvault";
-  src: url("iconvault_b56616ea60878ef34a82c0a1c6bc4fd8.eot");
-  src: url("iconvault_b56616ea60878ef34a82c0a1c6bc4fd8.eot?#iefix") format("embedded-opentype"),
-       url("iconvault_b56616ea60878ef34a82c0a1c6bc4fd8.woff") format("woff"),
-       url("iconvault_b56616ea60878ef34a82c0a1c6bc4fd8.ttf") format("truetype"),
-       url("iconvault_b56616ea60878ef34a82c0a1c6bc4fd8.svg#iconvault") format("svg");
+  src: url("iconvault_55fe9f2213016fc087ac76ddf4ba77a5.eot");
+  src: url("iconvault_55fe9f2213016fc087ac76ddf4ba77a5.eot?#iefix") format("embedded-opentype"),
+       url("iconvault_55fe9f2213016fc087ac76ddf4ba77a5.woff") format("woff"),
+       url("iconvault_55fe9f2213016fc087ac76ddf4ba77a5.ttf") format("truetype"),
+       url("iconvault_55fe9f2213016fc087ac76ddf4ba77a5.svg#iconvault") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -21,7 +21,6 @@
 .icon-lupa:before,
 .icon-home_menu:before,
 .icon-historia_menu:before,
-.icon-menuazul:before,
 .icon-goles_menu:before,
 .icon-calendario_menu:before,
 .icon-estrellas:before,
@@ -32,7 +31,6 @@
 .icon-pronosticos_menu:before,
 .icon-noticias_menu:before,
 .icon-polla_menu:before,
-.icon-flechaazul:before,
 .icon-polemicas_menu:before,
 .icon-calendario:before,
 .icon-equipos_menu:before,
@@ -56,19 +54,17 @@
 .icon-lupa:before { content: "\f105"; }
 .icon-home_menu:before { content: "\f106"; }
 .icon-historia_menu:before { content: "\f107"; }
-.icon-menuazul:before { content: "\f108"; }
-.icon-goles_menu:before { content: "\f109"; }
-.icon-calendario_menu:before { content: "\f10a"; }
-.icon-estrellas:before { content: "\f10b"; }
-.icon-biografia_menu:before { content: "\f10c"; }
-.icon-tvenvivo:before { content: "\f10d"; }
-.icon-equipo:before { content: "\f10e"; }
-.icon-fases:before { content: "\f10f"; }
-.icon-pronosticos_menu:before { content: "\f110"; }
-.icon-noticias_menu:before { content: "\f111"; }
-.icon-polla_menu:before { content: "\f112"; }
-.icon-flechaazul:before { content: "\f113"; }
-.icon-polemicas_menu:before { content: "\f114"; }
-.icon-calendario:before { content: "\f115"; }
-.icon-equipos_menu:before { content: "\f116"; }
-.icon-paises:before { content: "\f117"; }
+.icon-goles_menu:before { content: "\f108"; }
+.icon-calendario_menu:before { content: "\f109"; }
+.icon-estrellas:before { content: "\f10a"; }
+.icon-biografia_menu:before { content: "\f10b"; }
+.icon-tvenvivo:before { content: "\f10c"; }
+.icon-equipo:before { content: "\f10d"; }
+.icon-fases:before { content: "\f10e"; }
+.icon-pronosticos_menu:before { content: "\f10f"; }
+.icon-noticias_menu:before { content: "\f110"; }
+.icon-polla_menu:before { content: "\f111"; }
+.icon-polemicas_menu:before { content: "\f112"; }
+.icon-calendario:before { content: "\f113"; }
+.icon-equipos_menu:before { content: "\f114"; }
+.icon-paises:before { content: "\f115"; }
