--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -5,7 +5,7 @@
 	@font-face
 	{
 		font-family: "tvmaxFont";
-		src: url('../fonts/tvmax.ttf'); 
+		src: url('../fonts/tvmax.ttf') url('../fonts/tvmax_bold.ttf') url('../fonts/tvmax_italic.ttf') url('../fonts/tvmax_bold_italic.ttf'); 
 	}
 	body { font-family:tvmaxFont; overflow: hidden; /* this is important to prevent the whole page to bounce */}
 	
