TVMax: Merge de Android a IOS y mejoras en el touch

--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/main.css
@@ -2,7 +2,12 @@
 	* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 	html { -ms-touch-action: none; }			
 	body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%;}
-	body { overflow: hidden; /* this is important to prevent the whole page to bounce */}
+	@font-face
+	{
+		font-family: "tvmaxFont";
+		src: url('../fonts/tvmax.ttf') url('../fonts/tvmax_bold.ttf') url('../fonts/tvmax_italic.ttf') url('../fonts/tvmax_bold_italic.ttf'); 
+	}
+	body { font-family:tvmaxFont; overflow: hidden; /* this is important to prevent the whole page to bounce */}
 	
 	table {border: 0 !important; }
 	table thead tr {border: 0 !important; }
@@ -12,25 +17,26 @@
 	table thead {border-bottom: solid #FFD455; }
 	
 	thead {
-
 		background:#3E79C4;  
 		color:#FFD455;
 		font-size: 1.2em;
 		font-weight: bold;
-
+		
 	}
 	
-	.content-menu {background:#fffff; height; 40px; line-height:40px; font-size: 1.4em;}
-	.content-menu span:last-child { margin-left:  5px;}		
+	th, tr,td {text-align: center;}
+	
+	.content-menu {background:#fffff; height; 40px; line-height:40px; font-size: 1.6em;}
+	.content-menu span:last-child { margin-left: 10px; color:#4D4D4D;}		
 	
 	
-	.content-menu:nth-child(even) {background:#E6E6E6; color:#1E5733; }
-	.content-menu:nth-child(odd) {background:#FFFFFF;  color:#3E79C4; }
+	.content-menu:nth-child(even) {background:#E6E6E6;}
+	.content-menu:nth-child(odd) {background:#FFFFFF;}
 	.content-menu:last-child {border-bottom: solid #FFD455; }
 
 
 	#wrapper, #wrapper2, #wrapperM { 
-		position: absolute;z-index: 1; top: 50px; bottom: 0; left: 0; width: 100%; background: #fff;
+		position: absolute; z-index: 1; top: 50px; bottom: 0; left: 0; width: 100%; background: #fff;
 	}
 	
 	.scroller {background-color: #ffffff;}
@@ -155,7 +161,8 @@
 		padding:10px;
 		font-size:1.2em;  
 		color:#4D4D4D; 
-		font-style:italic; 	
+		font-style:italic;
+		 	
 	}
 	
 	
@@ -363,11 +370,15 @@
 	/*polemicas*/
 		
 	/*calendario*/
+	
+	body.content-calendario #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
+	body.content-calendario #wrapper2 .scroller .container  { padding:  2px !important; margin: 0 !important;}
+
 	body.content-calendario #wrapper,
 	body.content-calendario #wrapper2 { 
 		position: absolute;
 		z-index: 1; 
-		top: 100px; 
+		top: 92px; 
 		bottom: 0; 
 		left: 0; 
 		width: 100%; 
@@ -387,7 +398,7 @@
 	    background:none;
 	    text-shadow: none;
 	}
-
+	/*calendario*/
 
 	hl2 { font-size:1.2em; font-weight: bold; margin: 5px 0 5px 0;}
 
@@ -481,16 +492,22 @@
 	}
 	
 	
+	body.content-calendario .row.data-match:nth-child(even), 
 	body.content-calendario .row div[data-country]:nth-child(even), 
 	body.content-calendario .row div[data-phase]:nth-child(even) 
 	{ 
 		background:#E6E6E6; 
 	}	
 
+	body.content-calendario .row.data-match:nth-child(odd),
 	body.content-calendario .row div[data-country]:nth-child(odd), 
 	body.content-calendario .row div[data-phase]:nth-child(odd) {
 		background:#FFFFFF; 
 	}
+	
+	
+	
+	
 	
 	
 	/*calendario*/
@@ -529,6 +546,68 @@
 	body.content-teams .row div.team span:last-child {
 		margin-left: 5px;
 	}
+
+	/*calendario*/
+
+	body.content-players DataContent {padding: 0; margin: 0; border: 0; }
+	body.content-players DataContent {padding-top: 5px;}
+	
+	body.content-players DataContent block[class="Career Data"] hl2,
+	body.content-players DataContent block[class="Biography"] hl2 {
+		font-size: 1.6em; 
+		font-weight: bold; 
+		margin-top: 5px;
+		margin-bottom: 5px;
+		color:#000000;		
+	}
+	
+	body.content-players block[class="Personal Data"] p,
+	body.content-players block[class="Career Data"] p,
+	body.content-players block[class="Biography"]  p {
+		font-size: 1em;
+		color:gray;
+	}
+	
+	body.content-players block[class="Personal Data"] dt,
+	body.content-players block[class="Career Data"] dt {
+		font-size: 1.4em;
+
+	}
+	
+	body.content-players block[class="Career Data"] ul li:first-child {
+		font-size: 1.2em;
+		padding-top: 5px;
+		padding-bottom: 5px;
+		color:#000000;	
+	}
+	
+
+
+
+	body.content-teams DataContent {padding: 0; margin: 0; border: 0; }
+	body.content-teams dt {font-size: 1.4em; color:#000000;}
+	body.content-teams dd p { font-size: 1.2em; color:gray;}
+
+	body.content-stadiums DataContent {padding: 0; margin: 0; border: 0; }
+	body.content-stadiums dt {font-size: 1.4em; color:#000000;}
+	body.content-stadiums dd p { font-size: 1.2em; color:gray;}
+
+	body.content-history DataContent {padding: 0; margin: 0; border: 0; }
+	
+	body.content-history hl2 {font-size: 1.6em; color:#000000;}
+	body.content-history p {font-size: 1.2em; color:gray;}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
