--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/fonts/iconvault/iconvault-preview.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/fonts/iconvault/iconvault-preview.css
@@ -4,37 +4,47 @@
 
 @font-face {
   font-family: "iconvault";
-  src: url("iconvault_55fe9f2213016fc087ac76ddf4ba77a5.eot");
-  src: url("iconvault_55fe9f2213016fc087ac76ddf4ba77a5.eot?#iefix") format("embedded-opentype"),
-       url("iconvault_55fe9f2213016fc087ac76ddf4ba77a5.woff") format("woff"),
-       url("iconvault_55fe9f2213016fc087ac76ddf4ba77a5.ttf") format("truetype"),
-       url("iconvault_55fe9f2213016fc087ac76ddf4ba77a5.svg#iconvault") format("svg");
+  src: url("iconvault_3141655cfbe482e86f965c823396a249.eot");
+  src: url("iconvault_3141655cfbe482e86f965c823396a249.eot?#iefix") format("embedded-opentype"),
+       url("iconvault_3141655cfbe482e86f965c823396a249.woff") format("woff"),
+       url("iconvault_3141655cfbe482e86f965c823396a249.ttf") format("truetype"),
+       url("iconvault_3141655cfbe482e86f965c823396a249.svg#iconvault") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
+.icon-polla-forward:before,
 .icon-alertas:before,
 .icon-menuhome:before,
 .icon-fechas:before,
 .icon-estadios_menu:before,
 .icon-noticias:before,
+.icon-resultados:before,
+.icon-minutoaminuto:before,
 .icon-lupa:before,
 .icon-home_menu:before,
 .icon-historia_menu:before,
+.icon-shareios:before,
+.icon-menuazul:before,
 .icon-goles_menu:before,
 .icon-calendario_menu:before,
 .icon-estrellas:before,
+.icon-shareandroid:before,
 .icon-biografia_menu:before,
+.icon-polla-save:before,
 .icon-tvenvivo:before,
 .icon-equipo:before,
 .icon-fases:before,
 .icon-pronosticos_menu:before,
 .icon-noticias_menu:before,
 .icon-polla_menu:before,
+.icon-flechaazul:before,
 .icon-polemicas_menu:before,
+.icon-back:before,
 .icon-calendario:before,
 .icon-equipos_menu:before,
-.icon-paises:before {
+.icon-paises:before,
+.icon-polla-back:before {
   font-family: "iconvault";
   font-style: normal;
   font-weight: normal;
@@ -46,25 +56,35 @@
   text-decoration: inherit;
 }
 
-.icon-alertas:before { content: "\f100"; }
-.icon-menuhome:before { content: "\f101"; }
-.icon-fechas:before { content: "\f102"; }
-.icon-estadios_menu:before { content: "\f103"; }
-.icon-noticias:before { content: "\f104"; }
-.icon-lupa:before { content: "\f105"; }
-.icon-home_menu:before { content: "\f106"; }
-.icon-historia_menu:before { content: "\f107"; }
-.icon-goles_menu:before { content: "\f108"; }
-.icon-calendario_menu:before { content: "\f109"; }
-.icon-estrellas:before { content: "\f10a"; }
-.icon-biografia_menu:before { content: "\f10b"; }
-.icon-tvenvivo:before { content: "\f10c"; }
-.icon-equipo:before { content: "\f10d"; }
-.icon-fases:before { content: "\f10e"; }
-.icon-pronosticos_menu:before { content: "\f10f"; }
-.icon-noticias_menu:before { content: "\f110"; }
-.icon-polla_menu:before { content: "\f111"; }
-.icon-polemicas_menu:before { content: "\f112"; }
-.icon-calendario:before { content: "\f113"; }
-.icon-equipos_menu:before { content: "\f114"; }
-.icon-paises:before { content: "\f115"; }
+.icon-polla-forward:before { content: "\f100"; }
+.icon-alertas:before { content: "\f101"; }
+.icon-menuhome:before { content: "\f102"; }
+.icon-fechas:before { content: "\f103"; }
+.icon-estadios_menu:before { content: "\f104"; }
+.icon-noticias:before { content: "\f105"; }
+.icon-resultados:before { content: "\f106"; }
+.icon-minutoaminuto:before { content: "\f107"; }
+.icon-lupa:before { content: "\f108"; }
+.icon-home_menu:before { content: "\f109"; }
+.icon-historia_menu:before { content: "\f10a"; }
+.icon-shareios:before { content: "\f10b"; }
+.icon-menuazul:before { content: "\f10c"; }
+.icon-goles_menu:before { content: "\f10d"; }
+.icon-calendario_menu:before { content: "\f10e"; }
+.icon-estrellas:before { content: "\f10f"; }
+.icon-shareandroid:before { content: "\f110"; }
+.icon-biografia_menu:before { content: "\f111"; }
+.icon-polla-save:before { content: "\f112"; }
+.icon-tvenvivo:before { content: "\f113"; }
+.icon-equipo:before { content: "\f114"; }
+.icon-fases:before { content: "\f115"; }
+.icon-pronosticos_menu:before { content: "\f116"; }
+.icon-noticias_menu:before { content: "\f117"; }
+.icon-polla_menu:before { content: "\f118"; }
+.icon-flechaazul:before { content: "\f119"; }
+.icon-polemicas_menu:before { content: "\f11a"; }
+.icon-back:before { content: "\f11b"; }
+.icon-calendario:before { content: "\f11c"; }
+.icon-equipos_menu:before { content: "\f11d"; }
+.icon-paises:before { content: "\f11e"; }
+.icon-polla-back:before { content: "\f11f"; }
