--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -25,6 +25,8 @@
 	}
 	
 	th, tr,td {text-align: center;}
+
+	
 	
 	.content-menu {background:#fffff; height; 40px; line-height:40px; font-size: 1.6em;}
 	.content-menu span:last-child { margin-left: 10px; color:#4D4D4D;}		
@@ -52,7 +54,7 @@
 
 	header {	
 		position: absolute; 
-		z-index: 2; 
+		z-index: 4; 
 		top: 0; 
 		left: 0; 
 		width: 100%; 
@@ -70,6 +72,31 @@
 	}
 			
 	header .glyphicon { color: #3E79C4;}
+	
+	
+	
+	
+	footer {
+		position: absolute;
+		z-index: 2;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 50px;
+		line-height: 50px;
+		background: #ffffff;
+		padding: 0;
+		border-top: solid #4D4D4D;
+		display: none;
+	}
+	
+	body.content-polla footer {
+		display: block;
+	}
+	body.content-polla #wrapper {
+		bottom: 50px;
+	}
+	
 				
 	body:not(.content-home) header, 
 	body:not(.content-init) header {
@@ -194,7 +221,13 @@
 
 	body.content-polla h3 {text-align: center; font-size: 1.6em; padding: 0; margin: 0; text-transform: uppercase;}
 	body.content-polla .gol {position: absolute;  width:100%; top:-20px; background-color: yellow; z-index: 10; overflow-y: visible; }
-	body.content-polla .add, .sub { display: block; line-height:30px; font-size:1.6em; font-weight: bold;   }
+	body.content-polla .add, .sub { display: block; height:20px line-height:20px; font-size:1.6em; font-weight: bold;   }
+	body.content-polla .add.hidden, body.content-polla .sub.hidden {
+		height:0px
+		line-height:0px;
+		display:none;
+	}
+	
 	body.content-polla .add { color: green;  }
 	body.content-polla .sub { color: blue; }
 	
