--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -38,7 +38,13 @@
 
 
 	#wrapper, #wrapper2, #wrapperM { 
-		position: absolute; z-index: 1; top: 50px; bottom: 0; left: 0; width: 100%; background: #fff;
+		position: absolute; 
+		z-index: 1; 
+		top: 50px; 
+		bottom: 0; 
+		left: 0; 
+		width: 100%; 
+		background: #fff;
 	}
 	
 	.scroller {background-color: #ffffff;}
@@ -60,22 +66,19 @@
 		width: 100%; 
 		height: 50px;
 		line-height: 50px;
-		background: #FFFFFF;
+		background: #3E79C4;
 		padding: 0;
-		color: #1E5733;
-		font-size: 20px;
-		text-align: center;
-		font-weight: bold;
-		display: none;
+		color: #FFFFFF;
+		font-size: 1.2em;
+		text-align: left;
 		border-bottom: solid #4D4D4D;
 		text-transform: uppercase;
+		display: none;
 	}
 			
 	header .glyphicon { color: #3E79C4;}
 	
-	
-	
-	
+
 	footer {
 		position: absolute;
 		z-index: 2;
@@ -93,12 +96,13 @@
 	body.content-polla footer {
 		display: block;
 	}
+	
 	body.content-polla #wrapper {
 		bottom: 80px;
 	}
 	
 				
-	body:not(.content-home) header, 
+	 
 	body:not(.content-init) header {
 		display: block;
 	}
@@ -447,11 +451,12 @@
 		font-size:1.2em; 
 		font-weight:bold; 
 		color:#ffffff;
+		text-align: center;
 	}
 	
 	
 			
-	body.content-home header {display: none;}
+	/*body.content-home header {display: none;}
 	body.content-home #wrapper, body.content-home #wrapperM { 
 		position: absolute;
 		z-index: 1; 
@@ -460,7 +465,7 @@
 		left: 0; 
 		width: 100%; 
 		background: #fff;
-	}
+	}*/
 	
 	body.content-home #wrapper .scroller .container figure {position:relative;  width: 100%; height: auto; margin: 0; }
 	body.content-home #wrapper .scroller .container figure img { width: 100%;  height: auto;}			
