--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/base.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/base.css
@@ -14,12 +14,19 @@
 	* {
 		-webkit-tap-highlight-color:rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 	}
+	
+	@font-face
+	{
+		font-family: "tvmaxFont";
+		src: url('../fonts/tvmax.ttf'); 
+	}
 
 	body {
 	    -webkit-touch-callout:none;		/* prevent callout to copy image, etc when tap to hold */
 	    -webkit-text-size-adjust:none;		/* prevent webkit from resizing text to fit */
 	    -webkit-user-select:none;          /* prevent copy paste, to allow, change 'none' to 'text' */
-	    font-family:Helvetica, Arial, sans-serif;
+	    /*font-family:Helvetica, Arial, sans-serif;*/
+	    font-family:tvmaxFont;
 	    font-size:1em;
 	    height:100%;
 	    margin:0px;
