--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/main.css
@@ -25,6 +25,8 @@
 	}
 	
 	th, tr,td {text-align: center;}
+	body:not(.content-init) #splash {display: none;}
+	
 	
 	.content-menu {background:#fffff; height; 40px; line-height:40px; font-size: 1.6em;}
 	.content-menu span:last-child { margin-left: 10px; color:#4D4D4D;}		
@@ -52,7 +54,7 @@
 
 	header {	
 		position: absolute; 
-		z-index: 2; 
+		z-index: 4; 
 		top: 0; 
 		left: 0; 
 		width: 100%; 
@@ -70,6 +72,31 @@
 	}
 			
 	header .glyphicon { color: #3E79C4;}
+	
+	
+	
+	
+	footer {
+		position: absolute;
+		z-index: 2;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 50px;
+		line-height: 50px;
+		background: #ffffff;
+		padding: 0;
+		border-top: solid #4D4D4D;
+		display: none;
+	}
+	
+	body.content-polla footer {
+		display: block;
+	}
+	body.content-polla #wrapper {
+		bottom: 80px;
+	}
+	
 				
 	body:not(.content-home) header, 
 	body:not(.content-init) header {
@@ -188,13 +215,19 @@
 	body.content-polla figure img {width: 67px; height: 45px;}
 	body.content-polla figcaption {text-align: center; line-height:20px; position:relative;	}
 	
-	body.content-polla .goal {text-align: center; line-height:75px;  font-size: 1.4em; font-weight: bold;}
+	body.content-polla .goal {text-align: center; height:60px; line-height:60px;  font-size: 1.4em; font-weight: bold;}
 	body.content-polla .row.venue div { background:#ffffff; text-align:center; }
 	body.content-polla span {font-size: 0.9em;}
 
 	body.content-polla h3 {text-align: center; font-size: 1.6em; padding: 0; margin: 0; text-transform: uppercase;}
-	body.content-polla .gol {position: absolute;  width:100%; top:-20px; background-color: yellow; z-index: 10; overflow-y: visible; }
-	body.content-polla .add, .sub { display: block; line-height:30px; font-size:1.6em; font-weight: bold;   }
+	body.content-polla .gol {position: absolute;  width:100%; top:-20px;  height:120px; line-height:40px;  background-color: yellow; z-index: 10; overflow-y: visible; }
+	body.content-polla .add, body.content-polla .sub { display: block; height:10px line-height:10px; font-size:1.6em; font-weight: bold;   }
+	body.content-polla .add.hidden, body.content-polla .sub.hidden {
+		height:0px
+		line-height:0px;
+		display:none;
+	}
+	
 	body.content-polla .add { color: green;  }
 	body.content-polla .sub { color: blue; }
 	
@@ -512,30 +545,33 @@
 	
 	/*calendario*/
 	
+	body.content-polla #wrapper2 .scroller .container .row div.content-polla-menu,
 	body.content-goles .row div.video,
 	body.content-stadiums .row div.stadium,
 	body.content-history .row div.history,
 	body.content-players .row div.player, 	 
-	body.content-teams .row div.team {
+	body.content-teams .row div.teams {
 		height: 40px; 
 		line-height: 40px; 
 		font-size: 1.2em; 
 		color:#4D4D4D;
 	}
 	
+	body.content-polla #wrapper2 .scroller .container .row div.content-polla-menu:nth-child(even),
 	body.content-goles .row div.video:nth-child(even),
 	body.content-stadiums .row div.stadium:nth-child(even),
 	body.content-history .row div.history:nth-child(even), 
 	body.content-players .row div.player:nth-child(even), 
-	body.content-teams .row div.team:nth-child(even) { 
+	body.content-teams .row div.teams:nth-child(even) { 
 		background:#E6E6E6; 
 	}
 	
+	body.content-polla #wrapper2 .scroller .container .row div.content-polla-menu:nth-child(odd),
 	body.content-goles .row div.video:nth-child(odd),
 	body.content-stadiums .row div.stadium:nth-child(odd),
 	body.content-history .row div.history:nth-child(odd),   
 	body.content-players .row div.player:nth-child(odd),
-	body.content-teams .row div.team:nth-child(odd) {
+	body.content-teams .row div.teams:nth-child(odd) {
 		background:#FFFFFF; 
 	}
 	
@@ -543,7 +579,7 @@
 	body.content-stadiums .row div.stadium span:last-child,
 	body.content-history .row div.history span:last-child,
 	body.content-players .row div.player span:last-child,
-	body.content-teams .row div.team span:last-child {
+	body.content-teams .row div.teams span:last-child {
 		margin-left: 5px;
 	}
 
@@ -590,12 +626,12 @@
 
 	body.content-stadiums DataContent {padding: 0; margin: 0; border: 0; }
 	body.content-stadiums dt {font-size: 1.4em; color:#000000;}
-	body.content-stadiums dd p { font-size: 1.2em; color:gray;}
+	body.content-stadiums dd p { font-size: 1em; color:gray;}
 
 	body.content-history DataContent {padding: 0; margin: 0; border: 0; }
 	
 	body.content-history hl2 {font-size: 1.6em; color:#000000;}
-	body.content-history p {font-size: 1.2em; color:gray;}
+	body.content-history p {font-size: 1em; color:gray;}
 
 
 
