--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/fonts/iconvault/iconvault-preview.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/fonts/iconvault/iconvault-preview.css
@@ -4,11 +4,11 @@
 
 @font-face {
   font-family: "iconvault";
-  src: url("iconvault_3141655cfbe482e86f965c823396a249.eot");
-  src: url("iconvault_3141655cfbe482e86f965c823396a249.eot?#iefix") format("embedded-opentype"),
-       url("iconvault_3141655cfbe482e86f965c823396a249.woff") format("woff"),
-       url("iconvault_3141655cfbe482e86f965c823396a249.ttf") format("truetype"),
-       url("iconvault_3141655cfbe482e86f965c823396a249.svg#iconvault") format("svg");
+  src: url("iconvault_9549dd23156461d49d8780149a50c90f.eot");
+  src: url("iconvault_9549dd23156461d49d8780149a50c90f.eot?#iefix") format("embedded-opentype"),
+       url("iconvault_9549dd23156461d49d8780149a50c90f.woff") format("woff"),
+       url("iconvault_9549dd23156461d49d8780149a50c90f.ttf") format("truetype"),
+       url("iconvault_9549dd23156461d49d8780149a50c90f.svg#iconvault") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -32,6 +32,7 @@
 .icon-shareandroid:before,
 .icon-biografia_menu:before,
 .icon-polla-save:before,
+.icon-clasificacion:before,
 .icon-tvenvivo:before,
 .icon-equipo:before,
 .icon-fases:before,
@@ -75,16 +76,17 @@
 .icon-shareandroid:before { content: "\f110"; }
 .icon-biografia_menu:before { content: "\f111"; }
 .icon-polla-save:before { content: "\f112"; }
-.icon-tvenvivo:before { content: "\f113"; }
-.icon-equipo:before { content: "\f114"; }
-.icon-fases:before { content: "\f115"; }
-.icon-pronosticos_menu:before { content: "\f116"; }
-.icon-noticias_menu:before { content: "\f117"; }
-.icon-polla_menu:before { content: "\f118"; }
-.icon-flechaazul:before { content: "\f119"; }
-.icon-polemicas_menu:before { content: "\f11a"; }
-.icon-back:before { content: "\f11b"; }
-.icon-calendario:before { content: "\f11c"; }
-.icon-equipos_menu:before { content: "\f11d"; }
-.icon-paises:before { content: "\f11e"; }
-.icon-polla-back:before { content: "\f11f"; }
+.icon-clasificacion:before { content: "\f113"; }
+.icon-tvenvivo:before { content: "\f114"; }
+.icon-equipo:before { content: "\f115"; }
+.icon-fases:before { content: "\f116"; }
+.icon-pronosticos_menu:before { content: "\f117"; }
+.icon-noticias_menu:before { content: "\f118"; }
+.icon-polla_menu:before { content: "\f119"; }
+.icon-flechaazul:before { content: "\f11a"; }
+.icon-polemicas_menu:before { content: "\f11b"; }
+.icon-back:before { content: "\f11c"; }
+.icon-calendario:before { content: "\f11d"; }
+.icon-equipos_menu:before { content: "\f11e"; }
+.icon-paises:before { content: "\f11f"; }
+.icon-polla-back:before { content: "\f120"; }
